--- a/app/src/main/res/layout/post.xml
+++ b/app/src/main/res/layout/post.xml
@@ -30,22 +30,6 @@
             android:focusable="true"
             android:checkable="true">
 
-            <com.google.android.material.floatingactionbutton.FloatingActionButton
-                android:id="@+id/DeletePostButton"
-                style="@style/pinkButtonStyle"
-                android:layout_width="70dp"
-                android:layout_height="wrap_content"
-                android:layout_alignParentEnd="true"
-                android:layout_alignParentBottom="true"
-                android:layout_gravity="top|end"
-                android:layout_marginTop="15dp"
-                android:layout_marginEnd="15dp"
-                android:layout_marginBottom="15dp"
-                android:clickable="true"
-                app:maxImageSize="35dp"
-                app:srcCompat="@android:drawable/ic_delete"
-                tools:ignore="MissingConstraints" />
-
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -108,6 +92,23 @@
                 </LinearLayout>
 
             </LinearLayout>
+
+            <ImageView
+                android:id="@+id/DeletePostButton"
+                style="@style/pinkButtonStyle"
+                android:layout_width="30dp"
+                android:layout_height="30dp"
+                android:layout_alignParentEnd="true"
+                android:layout_alignParentBottom="true"
+                android:layout_gravity="top|end"
+                android:layout_marginTop="5dp"
+                android:layout_marginEnd="5dp"
+                android:layout_marginBottom="5dp"
+                android:clickable="true"
+                app:maxImageSize="100dp"
+                app:srcCompat="@drawable/ic_baseline_cancel_24"
+                app:tint="@color/colorPrimary"
+                tools:ignore="MissingConstraints" />
 
         </com.google.android.material.card.MaterialCardView>
 
