--- a/app/src/main/res/layout/shoppingcenter.xml
+++ b/app/src/main/res/layout/shoppingcenter.xml
@@ -19,6 +19,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent" />
 
+
         <com.google.android.material.tabs.TabLayout
             android:id="@+id/tablayout"
             android:layout_width="match_parent"
@@ -27,27 +28,42 @@
             app:layout_constraintBottom_toBottomOf="parent"
             tools:layout_editor_absoluteY="611dp">
 
-            <com.google.android.material.tabs.TabItem
+
+
+           <!-- <com.google.android.material.tabs.TabItem
+                android:id="@+id/HairTab"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Haar" />
 
             <com.google.android.material.tabs.TabItem
+                android:id="@+id/EyeTab"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Gezicht" />
 
             <com.google.android.material.tabs.TabItem
+                android:id="@+id/SkinTab"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Huid" />
 
             <com.google.android.material.tabs.TabItem
-                android:id="@+id/tabItem"
+                android:id="@+id/ClothesTab"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Kleren" />
+                android:text="Kleren" />-->
         </com.google.android.material.tabs.TabLayout>
+
+        <androidx.viewpager2.widget.ViewPager2
+            android:id="@+id/pager"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="1"
+            app:layout_constraintBottom_toTopOf="@+id/include2"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
         <ImageView
             android:id="@+id/imgAvatar"
@@ -62,7 +78,7 @@
 
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            app:layout_constraintBottom_toTopOf="@id/tablayout"
+            app:layout_constraintBottom_toTopOf="@id/pager"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/imgAvatar">
@@ -77,7 +93,7 @@
                     android:id="@+id/shoppingCenterGridView"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    app:AvatarParts="@{ShoppingCenterViewModel.data}"
+                    app:AvatarParts="@{ShoppingCenterViewModel.properties}"
                     />
             </LinearLayout>
         </HorizontalScrollView>
