--- a/app/src/main/res/layout/app_nav_header_main.xml
+++ b/app/src/main/res/layout/app_nav_header_main.xml
@@ -53,7 +53,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:paddingTop="10dp"
-        android:text="@{viewModel.adol.firstName}"
+        android:text="@{adolescent}"
         android:textStyle="bold"
         android:textSize="20dp"
         android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
