--- a/app/src/main/res/layout/billboard_goal.xml
+++ b/app/src/main/res/layout/billboard_goal.xml
@@ -48,14 +48,18 @@
                     app:layout_constraintTop_toBottomOf="@+id/button" />
 
 
-                <Button
+                <ImageView
                     android:id="@+id/button"
                     style="@style/Widget.MaterialComponents.Button.TextButton"
-                    android:layout_width="50dp"
-                    android:layout_height="50dp"
-                    app:icon="@drawable/ic_close"
-                    app:iconPadding="0dp"
-                    app:iconSize="50dp"
+                    android:layout_width="40dp"
+                    android:layout_height="40dp"
+                    app:srcCompat="@drawable/ic_baseline_cancel_24"
+                    app:tint="@color/colorPrimary"
+                    android:layout_marginTop="5dp"
+                    android:layout_marginEnd="5dp"
+                    android:layout_marginBottom="5dp"
+                    android:clickable="true"
+                    app:maxImageSize="100dp"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintTop_toTopOf="parent" />
 
