--- a/app/src/main/res/layout/shoppingcenter.xml
+++ b/app/src/main/res/layout/shoppingcenter.xml
@@ -19,84 +19,91 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent" />
 
-
-        <com.google.android.material.tabs.TabLayout
-            android:id="@+id/tablayout"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"
-            tools:layout_editor_absoluteY="611dp">
-
-
-
-           <!-- <com.google.android.material.tabs.TabItem
-                android:id="@+id/HairTab"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Haar" />
-
-            <com.google.android.material.tabs.TabItem
-                android:id="@+id/EyeTab"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Gezicht" />
-
-            <com.google.android.material.tabs.TabItem
-                android:id="@+id/SkinTab"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Huid" />
-
-            <com.google.android.material.tabs.TabItem
-                android:id="@+id/ClothesTab"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Kleren" />-->
-        </com.google.android.material.tabs.TabLayout>
-
-        <androidx.viewpager2.widget.ViewPager2
-            android:id="@+id/pager"
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="1"
-            app:layout_constraintBottom_toTopOf="@+id/include2"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
-
         <ImageView
             android:id="@+id/imgAvatar"
-            android:layout_width="match_parent"
-            android:layout_height="235dp"
+            android:layout_width="175dp"
+            android:layout_height="300dp"
             android:layout_marginTop="?attr/actionBarSize"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            tools:srcCompat="@tools:sample/avatars" />
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintBottom_toTopOf="@id/shoppingScroll"
+            tools:srcCompat="@tools:sample/avatars"
+            app:srcCompat="@drawable/ic_avatar_female"
+            android:scaleType="centerCrop"
+            android:scrollY="-175dp"/>
 
-        <HorizontalScrollView
-
+        <ScrollView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            app:layout_constraintBottom_toTopOf="@id/pager"
+            android:id="@+id/shoppingScroll"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/imgAvatar">
 
             <LinearLayout
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:orientation="vertical" >
 
-                <androidx.recyclerview.widget.RecyclerView
-                    app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
-                    android:id="@+id/shoppingCenterGridView"
-                    android:layout_width="wrap_content"
+                <TextView
+                    android:id="@+id/lblHair"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    app:AvatarParts="@{ShoppingCenterViewModel.properties}"
+                    android:text="Haarkleur:" />
+
+                <androidx.recyclerview.widget.RecyclerView
+
+                    android:id="@+id/hairGridView"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    app:AvatarParts="@{ShoppingCenterViewModel.hairProperties}"
+                    />
+
+                <TextView
+                    android:id="@+id/lblEye"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="Oogkleur:" />
+
+                <androidx.recyclerview.widget.RecyclerView
+
+                    android:id="@+id/eyeGridView"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    app:AvatarParts="@{ShoppingCenterViewModel.eyeProperties}"
+                    />
+
+                <TextView
+                    android:id="@+id/lblSkin"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="Huidskleur:" />
+
+                <androidx.recyclerview.widget.RecyclerView
+
+                    android:id="@+id/skinGridView"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    app:AvatarParts="@{ShoppingCenterViewModel.skinProperties}"
+                    />
+
+                <TextView
+                    android:id="@+id/lblBody"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="Kleren:" />
+
+                <androidx.recyclerview.widget.RecyclerView
+
+                    android:id="@+id/bodyGridView"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    app:AvatarParts="@{ShoppingCenterViewModel.bodyProperties}"
                     />
             </LinearLayout>
-        </HorizontalScrollView>
+        </ScrollView>
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
