--- a/app/src/main/res/layout/musicroom.xml
+++ b/app/src/main/res/layout/musicroom.xml
@@ -15,7 +15,7 @@
 
         <include
             android:id="@+id/include4"
-            layout="@layout/app_bar_back"
+            layout="@layout/app_bar_musicroom"
             android:layout_width="match_parent"
             android:layout_height="match_parent" />
 
