--- a/app/src/main/res/layout/profiel.xml
+++ b/app/src/main/res/layout/profiel.xml
@@ -62,6 +62,15 @@
                 android:text="@string/jane_doe_gmail_com"
                 android:textAlignment="center"
                 android:textSize="18sp" />
+            
+            <androidx.appcompat.widget.SwitchCompat
+                android:id="@+id/donkereModus"
+                android:layout_width="160dp"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_marginTop="175dp"
+                android:gravity="center"
+                android:text="@string/donkere_modus" />
 
             <Button
                 android:id="@+id/wachtwoordWIjzigen"
