--- a/app/src/main/res/layout/login.xml
+++ b/app/src/main/res/layout/login.xml
@@ -21,8 +21,8 @@
                     android:layout_marginEnd="32dp"
                     android:hint="@string/email"
                     android:paddingTop="30dp"
-                    app:boxBackgroundColor="@color/colorWhite"
-                    app:boxStrokeColor="@color/colorWhite"
+                    app:boxBackgroundColor="?android:attr/windowBackground"
+                    app:boxStrokeColor="?android:attr/windowBackground"
                     app:layout_constraintBottom_toTopOf="@+id/password_field"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
@@ -46,7 +46,8 @@
                     android:layout_marginEnd="32dp"
 
                     android:hint="@string/password"
-                    app:boxBackgroundColor="@color/colorWhite"
+                    app:boxBackgroundColor="?android:attr/windowBackground"
+                    app:boxStrokeColor="?android:attr/windowBackground"
                     app:layout_constraintBottom_toTopOf="@+id/login_button"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
