--- a/app/src/main/res/layout/skyscraper_goalpostimage.xml
+++ b/app/src/main/res/layout/skyscraper_goalpostimage.xml
@@ -36,7 +36,7 @@
         android:layout_height="wrap_content"
         android:layout_margin="6dp"
         android:clickable="true"
-        app:cardBackgroundColor="@{goal.completed ? @android:color/darker_gray:  @android:color/holo_red_dark}"
+        app:cardBackgroundColor="?android:attr/windowBackground"
         app:layout_constraintBottom_toBottomOf="@+id/bellySkyscraper"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -65,7 +65,7 @@
                 android:gravity="center"
                 android:text="DummyText"
                 android:textAppearance="?attr/textAppearanceHeadline6"
-
+                app:background="?android:attr/windowBackground"
                 android:textSize="16dp" />
             <!--<TextView
                     android:id="@+id/description"
