--- a/app/src/main/res/layout/add_photo.xml
+++ b/app/src/main/res/layout/add_photo.xml
@@ -62,19 +62,19 @@
 
                     <com.google.android.material.textfield.TextInputLayout
                         style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
-                        android:layout_width="wrap_content"
+                        android:layout_width="match_parent"
                         android:layout_height="wrap_content"
 
 
-                        android:hint="@string/plaatsen"
-                        android:layout_marginLeft="10dp">
+                        android:layout_marginLeft="10dp"
+                        android:hint="@string/plaatsen">
 
                         <AutoCompleteTextView
                             android:id="@+id/dropdownPlaatsen"
 
-                            android:inputType="none"
-                            android:layout_width="220dp"
+                            android:layout_width="match_parent"
                             android:layout_height="wrap_content"
+                            android:inputType="none"
                             android:textColorHint="#FFFFFF" />
 
 
