--- a/app/src/main/res/layout/backpack_post.xml
+++ b/app/src/main/res/layout/backpack_post.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
-    
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools">
+
     <data>
         <import type="android.view.View" />
         <variable
@@ -14,88 +15,80 @@
             name="posttype"
             type="com.example.faithandroid.models.PostType" />
     </data>
-    
+
+
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content">
 
-        <androidx.cardview.widget.CardView
+        <com.google.android.material.card.MaterialCardView
+            android:id="@+id/card"
             android:layout_width="match_parent"
-            android:layout_height="200dp"
-            android:layout_marginLeft="10dp"
-            android:layout_marginTop="10dp"
-            android:layout_marginRight="10dp"
-            android:layout_marginBottom="10dp"
-            app:cardElevation="10dp"
-            app:layout_constraintBottom_toBottomOf="parent">
+            android:layout_height="300dp"
+            android:layout_margin="8dp"
+            android:clickable="true"
+            android:focusable="true"
+            android:checkable="true">
 
             <LinearLayout
-                android:id="@+id/backpackCard"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:fadingEdgeLength="10dp">
+                android:layout_height="200dp"
+                android:orientation="vertical">
 
-                <!--TEXTPOST-->
-                <LinearLayout
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="16dp"
-                    android:layout_marginTop="16dp"
-                    android:layout_marginRight="16dp"
-                    android:layout_marginBottom="16dp"
-                    android:visibility='@{post.PostType == posttype.Text.ordinal()?View.VISIBLE:View.GONE}'
-                    android:orientation="vertical">
-
-                    <TextView
-                        android:id="@+id/BackpackTextTitle"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="0"
-                        android:text="@{post.title}"
-                        android:textColor="@android:color/black"
-                        android:textSize="24sp"
-                        android:textStyle="bold" />
-
-                    <TextView
-                        android:id="@+id/BackpackTextContent"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginTop="5dp"
-                        android:layout_weight="1"
-                        android:text='@{post.data.length() >= 49? post.data.substring(0, 50) + "...": post.data}'
-                        android:textColor="@android:color/black" />
-                </LinearLayout>
-
+                <!-- Media -->
                 <!--Imagepost-->
                 <ImageView
-                    android:id="@+id/BackpackImage"
-                    android:layout_width="wrap_content"
+                    android:id="@+id/TreasurechestImage"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:visibility='@{post.PostType == posttype.Image.ordinal()?View.VISIBLE:View.GONE}'
-                    android:scaleType="centerCrop"
-                    />
+                    android:layout_weight="2"
+                    android:scaleType="center"
+                    android:src="@drawable/cinema"
+                    android:visibility='@{post.PostType == posttype.Text.ordinal()?View.GONE:View.VISIBLE}' />
 
-                <!--Videopost-->
-                <ImageView
-                    android:id="@+id/BackpackVideo"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="100dp"
                     android:layout_weight="1"
-                    android:visibility='@{post.PostType == posttype.Video.ordinal()?View.VISIBLE:View.GONE}'
-                    android:src="@drawable/cinema"/>
+                    android:orientation="vertical"
+                    android:padding="16dp">
 
-                <!--Audiopost-->
-                <ImageView
-                    android:id="@+id/BackpackAudio"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:visibility='@{post.PostType == posttype.Audio.ordinal()?View.VISIBLE:View.GONE}'
-                    android:src="@drawable/sound" />
+                    <!-- Title, secondary and supporting text -->
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="@{post.title}"
+                        android:textAppearance="?attr/textAppearanceHeadline6" />
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="16dp"
+                        android:text="@{post.data}"
+                        android:textAppearance="?attr/textAppearanceBody2"
+                        android:textColor="?android:attr/textColorSecondary" />
+
+                </LinearLayout>
 
             </LinearLayout>
-        </androidx.cardview.widget.CardView>
-    </LinearLayout>
 
+            <ImageView
+                android:id="@+id/DeletePostButton"
+                style="@style/pinkButtonStyle"
+                android:layout_width="30dp"
+                android:layout_height="30dp"
+                android:layout_alignParentEnd="true"
+                android:layout_alignParentBottom="true"
+                android:layout_gravity="top|end"
+                android:layout_marginTop="5dp"
+                android:layout_marginEnd="5dp"
+                android:layout_marginBottom="5dp"
+                android:clickable="true"
+                app:maxImageSize="100dp"
+                app:srcCompat="@drawable/ic_baseline_cancel_24"
+                app:tint="@color/colorPrimary"
+                tools:ignore="MissingConstraints" />
+
+        </com.google.android.material.card.MaterialCardView>
+    </LinearLayout>
 </layout>
