--- a/app/src/main/res/layout/filtered_post.xml
+++ b/app/src/main/res/layout/filtered_post.xml
@@ -39,37 +39,18 @@
                 <!--Imagepost-->
                 <ImageView
                     android:id="@+id/TreasurechestImage"
-                    android:layout_width="wrap_content"
-                    android:layout_height="200dp"
-                    android:layout_weight="1"
-                    android:scaleType="centerCrop"
-                    android:visibility='@{post.PostType == posttype.Image.ordinal()?View.VISIBLE:View.GONE}'
-
-                    />
-
-                <!--Videopost-->
-                <ImageView
-                    android:id="@+id/TreasurechestVideo"
-                    android:layout_width="wrap_content"
-                    android:layout_height="200dp"
-                    android:layout_weight="1"
-                    android:scaleType="centerCrop"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="2"
+                    android:scaleType="center"
                     android:src="@drawable/cinema"
-                    android:visibility='@{post.PostType == posttype.Video.ordinal()?View.VISIBLE:View.GONE}' />
 
-                <!--Audiopost-->
-                <ImageView
-                    android:id="@+id/TreasurechestAudio"
-                    android:layout_width="wrap_content"
-                    android:layout_height="200dp"
-                    android:layout_weight="1"
-                    android:scaleType="centerCrop"
-                    android:src="@drawable/sound"
-                    android:visibility='@{post.PostType == posttype.Audio.ordinal()?View.VISIBLE:View.GONE}' />
+                    android:visibility='@{post.PostType == posttype.Text.ordinal()?View.GONE:View.VISIBLE}' />
 
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="100dp"
+                    android:layout_weight="1"
                     android:orientation="vertical"
                     android:padding="16dp">
 
@@ -78,16 +59,15 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="@{post.title}"
-                        android:textAppearance="?attr/textAppearanceHeadline6"
-                        />
+                        android:textAppearance="?attr/textAppearanceHeadline6" />
+
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="16dp"
                         android:text="@{post.data}"
                         android:textAppearance="?attr/textAppearanceBody2"
-                        android:textColor="?android:attr/textColorSecondary"
-                        />
+                        android:textColor="?android:attr/textColorSecondary" />
 
                 </LinearLayout>
 
@@ -95,59 +75,6 @@
 
         </com.google.android.material.card.MaterialCardView>
 
-<!--        <androidx.cardview.widget.CardView-->
-<!--            android:layout_width="match_parent"-->
-<!--            android:layout_height="200dp"-->
-<!--            android:layout_marginLeft="10dp"-->
-<!--            android:layout_marginTop="10dp"-->
-<!--            android:layout_marginRight="10dp"-->
-<!--            android:layout_marginBottom="10dp"-->
-<!--            app:cardElevation="10dp"-->
-<!--            app:layout_constraintBottom_toBottomOf="parent">-->
-
-<!--            <LinearLayout-->
-<!--                android:id="@+id/treasurechestCard"-->
-<!--                android:layout_width="wrap_content"-->
-<!--                android:layout_height="wrap_content"-->
-<!--                android:fadingEdgeLength="10dp"-->
-<!--                android:orientation="vertical">-->
-
-<!--                &lt;!&ndash;TEXTPOST&ndash;&gt;-->
-<!--                <LinearLayout-->
-<!--                    android:layout_width="wrap_content"-->
-<!--                    android:layout_height="wrap_content"-->
-<!--                    android:layout_marginLeft="16dp"-->
-<!--                    android:layout_marginTop="16dp"-->
-<!--                    android:layout_marginRight="16dp"-->
-<!--                    android:layout_marginBottom="16dp"-->
-
-<!--                    android:orientation="vertical">-->
-
-<!--                    <TextView-->
-<!--                        android:id="@+id/TreasurechestTextTitle"-->
-<!--                        android:layout_width="wrap_content"-->
-<!--                        android:layout_height="wrap_content"-->
-<!--                        android:layout_weight="0"-->
-<!--                        android:text="@{post.title}"-->
-<!--                        android:textColor="@android:color/black"-->
-<!--                        android:textSize="24sp"-->
-<!--                        android:textStyle="bold" />-->
-
-<!--                    <TextView-->
-<!--                        android:id="@+id/TreasurechestTextContent"-->
-<!--                        android:layout_width="wrap_content"-->
-<!--                        android:layout_height="wrap_content"-->
-<!--                        android:layout_marginTop="5dp"-->
-<!--                        android:layout_weight="1"-->
-<!--                        android:text='@{post.data.length() >= 49? post.data.substring(0, 50) + "...": post.data}'-->
-<!--                        android:visibility='@{post.PostType == posttype.Text.ordinal()?View.VISIBLE:View.GONE}'-->
-<!--                        android:textColor="@android:color/black" />-->
-<!--                </LinearLayout>-->
-
-
-
-<!--            </LinearLayout>-->
-<!--        </androidx.cardview.widget.CardView>-->
     </LinearLayout>
 
 
