--- a/app/src/main/res/layout/post.xml
+++ b/app/src/main/res/layout/post.xml
@@ -18,8 +18,8 @@
 
 
     <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content">
+        android:layout_width="match_parent"
+        android:layout_height="300dp">
 
         <com.google.android.material.card.MaterialCardView
             android:id="@+id/card"
@@ -31,7 +31,7 @@
             android:checkable="true">
 
             <LinearLayout
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="200dp"
                 android:orientation="vertical">
 
@@ -40,16 +40,14 @@
                 <ImageView
                     android:id="@+id/TreasurechestImage"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="2"
-                    android:scaleType="center"
+                    android:layout_height="200dp"
+                    android:scaleType="centerCrop"
                     android:src="@drawable/cinema"
                     android:visibility='@{post.PostType == posttype.Text.ordinal()?View.GONE:View.VISIBLE}' />
 
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="100dp"
-                    android:layout_weight="1"
                     android:orientation="vertical"
                     android:padding="16dp">
 
