--- a/app/src/main/res/layout/billboard.xml
+++ b/app/src/main/res/layout/billboard.xml
@@ -32,7 +32,7 @@
             android:layout_height="match_parent"
             android:clipToPadding="false"
             android:padding="6dp"
-            app:BillboardListData="@{viewmodelBillboard.properties}"
+            app:BillboardListData="@{viewmodelBillboard.properties.data}"
 
             app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
             app:layout_constraintBottom_toBottomOf="parent"
