--- a/app/src/main/res/layout/musicroom.xml
+++ b/app/src/main/res/layout/musicroom.xml
@@ -35,7 +35,7 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
-                app:playlistData="@{viewModel.playlists}"/>
+                app:playlistData="@{viewModel.playlists.data}"/>
         </androidx.constraintlayout.widget.ConstraintLayout>
 
     </FrameLayout>
