rebase animatie toegevoegd aan homescreen => skyscraper & homescreen => musicroom

--- a/app/src/main/res/navigation/navigation.xml
+++ b/app/src/main/res/navigation/navigation.xml
@@ -157,8 +157,7 @@
             app:destination="@id/treasureChestFragment"
             app:enterAnim="@anim/slide_in_right"
             app:exitAnim="@anim/slide_out_left"
-            app:popEnterAnim="@anim/slide_in_left"
-            app:popExitAnim="@anim/slide_out_right" />
+            app:popEnterAnim="@anim/slide_in_left"/>
     </fragment>
 
     <fragment
